@@ -1,6 +1,6 @@
-Date: 2022-11-18
+Date: 2022-11-22
 Package: CHNOSZ
-Version: 1.9.9-45
+Version: 1.9.9-46
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
